<resources>
    <string name="app_name">Crypto Monitor</string>
    <string name="text_greeting">Привет!</string>
    <string name="text_select_currency">Выбери, пожалуйста, валюту, которая тебе нравится:</string>
    <string name="text_enable_notifications">И не забудь про уведомления,\nчтобы не пропустить нужную цену:</string>
    <string name="text_button_enable_notifications">Разрешить уведомления</string>
    <string name="text_next">Вперёд!</string>
    <string name="text_drop_settings">Сбросить настройки</string>
    <string name="text_selected_currency">Выбранная валюта:</string>
    <string name="text_selected_time_interval">Время обновления:</string>
    <string name="text_save">Сохранить</string>
    <string name="text_delete">Удалить</string>
    <string name="text_cancel">Отмена</string>
    <string name="text_target_price">Целевая цена</string>
    <string name="text_price_reached">Цена достигнута!</string>
    <string name="text_current_price">Текущая цена: %1$s: %2$s%3$s</string>
    <string name="text_price">Текущая цена: </string>
    <string name="text_volume">Объём торгов за 24 часа: </string>
    <string name="text_min_price">Минимальная цена за 24 часа: </string>
    <string name="text_max_price">Максимальная цена за 24 часа: </string>
    <string name="text_description_usdt">USDT - Tether, стабильная криптовалюта, привязанная к доллару США. USDT используется для торговли на криптовалютных биржах и для сохранения стоимости в условиях волатильности рынка. Это также часто используемый инструмент для обмена цифровых активов на стабильные фиатные деньги.</string>
    <string name="text_description_usdc">USDC - USD Coin, стабильная криптовалюта, привязанная к доллару США. Используется для обмена цифровых активов на платформах децентрализованных финансов (DeFi) и в других криптовалютных операциях.</string>
    <string name="text_description_btc">BTC - Bitcoin, первая и самая известная криптовалюта, созданная Сатоши Накамото. Биткоин использует технологию блокчейн для обеспечения децентрализованных транзакций без участия посредников.</string>
    <string name="text_description_eth">ETH - Ethereum, платформа для смарт-контрактов и децентрализованных приложений (dApps). Эфириум также является криптовалютой, используемой для оплаты транзакций и в качестве стимула для майнеров.</string>
    <string name="text_description_ltc">LTC - Litecoin, криптовалюта, основанная на коде Bitcoin. Отличается более быстрыми временами транзакций и алгоритмом добычи, который позволяет использовать CPU и GPU.</string>
    <string name="text_description_xmr">XMR - Monero, приватная и недопрачиваемая криптовалюта. XMR использует технологии конфиденциальности, такие как кольцевые подписи и анонимные адреса, чтобы обеспечить анонимность транзакций.</string>
    <string name="text_description_dash">DASH - Dash, цифровая валюта с фокусом на приватности и моментальных транзакциях. Dash предлагает функции, такие как PrivateSend и InstantSend, чтобы обеспечить анонимность и быстрые операции.</string>
    <string name="text_description_zec">ZEC - Zcash, криптовалюта, предоставляющая приватные транзакции с возможностью выбора уровня прозрачности. Zcash использует протокол zk-SNARKs для обеспечения конфиденциальности.</string>
    <string name="text_description_doge">DOGE - Dogecoin, шуточная криптовалюта, основанная на популярном интернет-меме с изображением шутливой собаки. Несмотря на свою начальную шутливость, Dogecoin стал популярным среди некоторых криптовалютных пользователей.</string>
    <string name="text_description_dgb">DGB - Digibyte, криптовалюта, ориентированная на безопасность, децентрализацию и скорость транзакций. Digibyte также экспериментирует с различными алгоритмами майнинга для повышения безопасности сети.</string>
    <string name="text_description_sol">SOL - Solana, блокчейн-платформа с высокой производительностью и низкой стоимостью транзакций. Solana использует консенсусный механизм Proof of History (PoH) для достижения высокой масштабируемости.</string>
    <string name="text_description_xrp">XRP - Ripple, криптовалюта и платежная сеть, разработанная компанией Ripple Labs. XRP используется для обеспечения быстрых и дешевых глобальных платежей между финансовыми учреждениями.</string>
    <string name="text_description_ada">ADA - Cardano, блокчейн-платформа с фокусом на безопасности и масштабируемости. Cardano стремится предоставить инструменты для создания децентрализованных приложений и смарт-контрактов.</string>
    <string name="text_description_aave">AAVE - Aave, децентрализованная финансовая (DeFi) платформа, предоставляющая услуги кредитования и заимствования. Aave позволяет пользователям зарабатывать проценты на своих криптовалютных депозитах.</string>
    <string name="text_description_dot">DOT - Polkadot, блокчейн-платформа, предназначенная для соединения нескольких блокчейнов в единую сеть. Polkadot стремится обеспечить интероперабельность и масштабируемость между различными блокчейнами.</string>
    <string name="text_description_trx">TRX - TRON, блокчейн-платформа для создания децентрализованных приложений (dApps) и цифровых контента. TRON также предоставляет инструменты для создания токенов и цифровых активов.</string>
    <string name="text_description_matic">MATIC - Polygon, масштабируемый слой для Ethereum, предназначенный для улучшения производительности и снижения комиссий. Polygon предоставляет инструменты для разработки и развертывания децентрализованных приложений.</string>
    <string name="text_description_etc">ETC - Ethereum Classic, форк Ethereum, возникший после хардфорка, связанного с ситуацией вокруг хака DAO. Ethereum Classic сохраняет оригинальную цепь Ethereum и принципы неизменности блокчейна.</string>
    <string name="text_description_chz">CHZ - Chiliz, криптовалюта, используемая на платформе Socios.com для покупки токенов болельщиков и участия в голосованиях за спортивные команды. Chiliz стремится обеспечить фанатам спорта участие в принятии решений в клубах.</string>
    <string name="text_description_bch">BCH - Bitcoin Cash, форк Bitcoin, созданный для улучшения масштабируемости и скорости транзакций. Bitcoin Cash увеличил размер блока, чтобы улучшить пропускную способность сети и снизить комиссии.</string>

</resources>